<resources>


    <!-- Globals -->
    <string name="tv_app_name">DocDateApp</string>


    <!-- LOGIN SCREEN -->
    <string name="tv_login_title_text">Welcome!</string>
    <string name="et_login_email_hint">Email ID</string>
    <string name="et_login_password_hint">Password</string>
    <string name="btn_login_login_text">Login</string>
    <string name="tv_login_donthaveanaccount_text">Don\'t have an account?</string>
    <string name="tv_login_register_text"><u>Register</u></string>


    <!-- MAIN SCREEN -->
    <string name="btn_docslist">DocsList</string>
    <string name="btn_appointments">My Appointments</string>
    <string name="btn_new_date">New Date</string>

    <!-- MAIN TAB SCREEN -->
    <string name="docs">Doctors</string>
    <string name="profile">Profile</string>

    <!-- POPUP SCREEN -->
    <string name="btn_client">Client</string>
    <string name="btn_doc">Doctor</string>
    <string name="tv_register_as">Register as :</string>

    <!-- REGISTER SCREEN -->
    <string name="tv_register_title_text">CREATE AN ACCOUNT</string>
    <string name="til_register_firstname_hint">First name</string>
    <string name="til_register_lastname_hint">Last name</string>
    <string name="til_register_confirmpassword_hint">Confirm Password</string>
    <string name="cb_register_termsandcondition_text">I Agree to the <u>Terms and Condition</u></string>
    <string name="btn_register_register_text">Register</string>
    <string name="tv_register_alreadyhaveanaccount_text">Already have an account?</string>
    <string name="tv_register_login_text"><u>Login</u></string>
    <string name="tv_login_forgotpassword_text"><u>Forgot Password?</u></string>

    <!-- REGISTER SCREEN DOCS -->
    <string name="til_register_title_hint">Title</string>
    <string name="til_register_address">Address</string>
    <string name="til_register_phone">Phone</string>
    <string name="til_register_website">Website URL</string>
    <string name="til_register_specialization">Specialisation</string>
    <string name="til_register_profession">Profession</string>
    <string name="til_register_email">Email</string>
    <string name="tv_register_insurance">Health insurance companies</string>
    <string name="tv_svs">SVS</string>
    <string name="tv_ögk">ÖGK</string>
    <string name="tv_bvaeb">BVAEB</string>
    <string name="tv_kva">KVA</string>
    <string name="btn_upload">CHOOSE FILE</string>

    <!-- Error messages for register UI -->
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_success">You are registered successfully.</string>


    <!-- FORGOT PASSWORD SCREEN -->
    <string name="tv_forgotpassword_title_text">FORGOT PASSWORD?</string>
    <string name="tv_forgotpassword_description_text">Please enter your e-mail address and we\'ll send you an email to reset your password</string>
    <string name="btn_forgotpassowrd_submit_text">Submit</string>


    <string name="app_name">DocDateApp</string>
    <string name="iv_settings_userphoto_contentdescription">Gradient Background of DocDateApp</string>
    <string name="til_lastname_hint">Last name</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_doc_registration">DocRegistration</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_basic_ativity">BasicAtivity</string>
    <string name="title_activity_client_registration">ClientRegistrationActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_your_profile_image">Upload your profile image</string>
</resources>